@@ -21,7 +21,7 @@ package Net::FullAuto;
 ################################################################
 
 
-our $VERSION='0.999991';
+our $VERSION='0.999992';
 
 
 use 5.005;
